# 3gmpd

_crawler/: pyproject.toml
_crawler/tgmcrawler/: scrapy.cfg
_crawler/tgmcrawler/tgmcrawler/: items.py  middlewares.py  pipelines.py  settings.py
_crawler/tgmcrawler/tgmcrawler/spiders/: book.py
crawler/: books.json  crawl.py  pyproject.toml
crawler/tgmcrawler/tgmcrawler/: items.py
uploader/: gentable.py  pyproject.toml  upload.py
